--- a/keyshare/Cargo.toml
+++ b/keyshare/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.22.1"
-chacha20poly1305 = "0.10.1"
+chacha20poly1305 = {version = "0.10.1", features = ["std"]}
 thiserror = "1.0.64"
+nn-secret-share = { path = "../nn-secret-share"}
