--- a/keyshare/Cargo.toml
+++ b/keyshare/Cargo.toml
@@ -10,6 +10,7 @@ thiserror = "1.0.64"
 nn-secret-share = { path = "../nn-secret-share"}
 serde = { version = "1.0.214", features = ["derive"]}
 serde_json = "1.0.132"
+clap = { version = "4.5.23", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.14.0"
