--- a/keyshare/Cargo.toml
+++ b/keyshare/Cargo.toml
@@ -11,6 +11,7 @@ nn-secret-share = { path = "../nn-secret-share"}
 serde = { version = "1.0.214", features = ["derive"]}
 serde_json = "1.0.132"
 clap = { version = "4.5.23", features = ["derive"] }
+poly = { path = "../poly"}
 
 [dev-dependencies]
 tempfile = "3.14.0"
